// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapseButton initial render 1`] = `
<div>
  <div>
    <button
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 collapseBtn"
      tabindex="0"
      title="Expand/Collapse this section"
      type="button"
    >
      <span
        class="MuiButton-label-2"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-30 icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 14l5-5 5 5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        testSection
      </span>
      <span
        class="MuiTouchRipple-root-39"
      />
    </button>
  </div>
</div>
`;

exports[`CollapseButton renders the button collapsed if in collapsedSections 1`] = `
<div>
  <div>
    <button
      class="MuiButtonBase-root-72 MuiButton-root-46 MuiButton-text-48 MuiButton-flat-51 collapseBtn"
      tabindex="0"
      title="Expand/Collapse this section"
      type="button"
    >
      <span
        class="MuiButton-label-47"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-75 icon collapsed"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 14l5-5 5 5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        testSection
      </span>
      <span
        class="MuiTouchRipple-root-84"
      />
    </button>
  </div>
</div>
`;
